--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,9 @@
             android:theme="@style/Theme.BettingApp.NoActionBar"></activity>
         <activity
             android:name=".InitializeGameActivity"
-            android:label="@string/title_activity_initialize_game">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
